fix(UI): fixed scanline not showing in the item placeholder

--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ body::-webkit-scrollbar {
       border: 2px solid transparent;
       border-radius: 50em;
       .background {
-        background-image: url("./images/scanline.jpg");
+        background-image: url("./scanline.jpg");
         background-position: center;
         background-size: cover;
         width: 100%;
